# Wumbness

./: .gitignore  DESIGN.md  PRD.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  pyproject.toml  vercel.json  vitest.config.ts
api/: main.py
api/interfaces/: health.py  match.py  triage.py
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/api/match/: route.ts
app/api/triage/: route.ts
app/auth/: page.tsx
app/chat/: page.tsx
app/chat/[matchId]/: loading.tsx  page.tsx
app/components/: service-worker-register.tsx
app/components/auth/: AuthCard.tsx  CounselorForm.tsx  PasswordInput.tsx  PatientForm.tsx
app/components/chat/: ChatHeader.tsx  ChatRoomLayout.tsx  RoomInput.tsx  RoomMessage.tsx  RoomMessageSkeleton.tsx
app/components/dashboard/: ConcludeMatchButton.tsx  CounselorDashboard.tsx  PatientDashboard.tsx
app/components/navigation/: AppNavigation.tsx
app/components/notifications/: ToastHost.tsx
app/components/triage/: ChatInput.tsx  ChatLayout.tsx  ChatMessage.tsx  MatchingScreen.tsx  data.ts
app/dashboard/: layout.tsx  page.tsx
app/triage/: page.tsx
lib/chat/: types.ts
lib/groq/: triage.ts
lib/matcher/: embed.ts  match.ts
lib/supabase/: action.ts  chat.ts  current-user.ts  matches.ts  proxy.ts  server.ts
public/: offline.html  sw.js
tests/setup/: env.ts
tests/units/: embed.test.ts  match.test.ts  triage.test.ts
