[project]
name = "wumbness"
version = "0.1.0"
description = "Progressive Web App (PWA) that connects youth patients with certified volunteer counselors through AI triage, vector-based counselor matching, and real-time chat."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
]

[tool.fastapi]
entrypoint = "api.main:app"